--- a/help/en/package/jmri/jmrit/beantable/RouteTable.html
+++ b/help/en/package/jmri/jmrit/beantable/RouteTable.html
@@ -1,107 +1,107 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- $Id: RouteTable.html,v 1.4 2007-11-03 18:12:57 dan_boudreau Exp $ -->
-<html lang="en">
-<head>
+<!-- $Id: RouteTable.html,v 1.5 2007-11-03 21:26:25 dan_boudreau Exp $ -->
+<HTML LANG="en">
+<HEAD>
 <TITLE>JMRI: Route Table Help</TITLE>
-<META http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<META content="Bob Jacobsen" name="Author">
-<META name="keywords" content="JMRI help Route Table">
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+<META CONTENT="Bob Jacobsen" NAME="Author">
+<META NAME="keywords" CONTENT="JMRI help Route Table">
 
 <!-- Style -->
-<META http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link rel="stylesheet" type="text/css" href="/css/default.css"
-	media="screen">
-<link rel="stylesheet" type="text/css" href="/css/print.css"
-	media="print">
-<link rel="icon" href="/images/jmri.ico" type="image/png">
-<link rel="home" title="Home" href="/">
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+<LINK REL="stylesheet" TYPE="text/css" HREF="/css/default.css"
+	MEDIA="screen">
+<LINK REL="stylesheet" TYPE="text/css" HREF="/css/print.css"
+	MEDIA="print">
+<LINK REL="icon" HREF="/images/jmri.ico" TYPE="image/png">
+<LINK REL="home" TITLE="Home" HREF="/">
 <!-- /Style -->
-</head>
+</HEAD>
 
-<body>
+<BODY>
 <H2>The Route Table</H2>
 
-<p>A route consists of one or more turnouts or sensors that you
+<P>A route consists of one or more turnouts or sensors that you
 would like to control. Before creating a route, you should first add
 some turnouts or sensors by using either the turnout table or sensor
-table. These tables can be found under the main menu "Tools -> Tables"</p>
-<p>Once you have some turnouts or sensors to manage use the "Add"
+table. These tables can be found under the main menu "Tools -> Tables"</P>
+<P>Once you have some turnouts or sensors to manage use the "Add"
 button in the lower left hand corner of the route table to create a new
-route.</p>
-<br>
-<h3>Route Table Buttons and Checkboxes</h3>
+route.</P>
+<BR>
+<H3>Route Table Buttons and Checkboxes</H3>
 
-<ul>
-	<li>User Name <br>
-	You can directly enter or change the "User Name" for an existing route.</li>
-	<li>Set<br>
-	Pushing the "Set" button will trigger an existing route.</li>
-	<li>Delete<br>
-	Pushing the "Delete" button will remove the route. To permanently
-	delete the route you must save the panel.</li>
-	<li>Enabled<br>
+<UL>
+	<LI>User Name <BR>
+	You can directly enter or change the "User Name" for an existing route.</LI>
+	<LI>Set<BR>
+	Pushing the "Set" button will trigger an existing route.</LI>
+	<LI>Delete<BR>
+	Pushing the "Delete" button will remove the route from the table. To
+	permanently delete the route you must save the panel.</LI>
+	<LI>Enabled<BR>
 	To disable a route from triggering, uncheck the "Enabled" box for the
 	route. Enabled is not saved and will be restored when a panel is loaded
-	at startup.</li>
-	<li>Locked<br>
+	at startup.</LI>
+	<LI>Locked<BR>
 	When checked the route is locked. This means that turnouts that can be
-	locked by JMRI will not respond to commands from cabs to change.</li>
-	<li>Edit<br>
-	Push this button to edit the route.</li>
-	<li>Add<br>
-	Push this button to add a new route.</li>
+	locked by JMRI will not respond to commands from cabs to change.</LI>
+	<LI>Edit<BR>
+	Push this button to edit the route.</LI>
+	<LI>Add<BR>
+	Push this button to add a new route.</LI>
 
-</ul>
+</UL>
 
 <H3>Add/Edit Route</H3>
-<p>The first thing you must do when creating a route is name it. In
+<P>The first thing you must do when creating a route is name it. In
 the box labeled "Route System Name" enter a unique name for your route.
 You can optionally enter a more descriptive name in the "Route User
-Name" box.</p>
-<p>The radio button below the "Route User Name" allows you to show
+Name" box.</P>
+<P>The radio button below the "Route User Name" allows you to show
 only the turnouts or sensors that are part of this route. There are two
 tables below the "Show" button, the first one contains turnouts and the
 second contains sensors. Click the "Include" box in either table to add
 the desired turnouts or sensor to your route. Next to the "Include" box
 is the action that the turnout or sensor can perform when the route is
 triggered. For example, if you wish the turnout to throw when the route
-is triggered select "Set Thrown" in the drop down box.</p>
-<p>Below the turnout and sensor tables are two optional features. By
+is triggered select "Set Thrown" in the drop down box.</P>
+<P>Below the turnout and sensor tables are two optional features. By
 hitting the "Set" button you can add a sound file that you wish to play
-when the route is triggered, or a script file that you want to run.</p>
-<p>To trigger a route, you need to specify how the route is to be
+when the route is triggered, or a script file that you want to run.</P>
+<P>To trigger a route, you need to specify how the route is to be
 activated. You can select up to three sensors and one turnout. Of any of
 the sensors or turnout meets the condition that you specify, the route
-will trigger.</p>
-<p>In some cases, it might be necessary to delay or slow down the
+will trigger.</P>
+<P>In some cases, it might be necessary to delay or slow down the
 rate that JMRI sends commands to change turnouts on the layout. By
 entering a value in the "Added Delay" box, you can increase the amount
-of time between turnout commands when this route is triggered.</p>
-<p>The next text box allows you to enter a turnout that will lock
-this route.</p>
-<p>Once you are satisfied with your route, use the "Add Route"
+of time between turnout commands when this route is triggered.</P>
+<P>The next text box allows you to enter a turnout that will lock
+this route.</P>
+<P>Once you are satisfied with your route, use the "Add Route"
 button to create the route. To save your route you must use the "Store
 Panel" command which can be found under the "Panels" main menu. If you
 decide that you need to change your route, use the "Edit" and "Update
-Route" buttons to modify your route.</p>
+Route" buttons to modify your route.</P>
 
-<br>
+<BR>
 <H3>NCE turnout lock feature</H3>
 
-<p>The turnout lock feature allows you to selectively disable
+<P>The turnout lock feature allows you to selectively disable
 accessory (turnouts) commands from cabs. By locking a turnout, the JMRI
 program will monitor the turnout's accessory address and if it detects a
 change command from a cab, will cancel the command immediately by
-sending out the opposite command to the turnout.</p>
-<p>To help you select a set of turnouts to lock, a route can be
+sending out the opposite command to the turnout.</P>
+<P>To help you select a set of turnouts to lock, a route can be
 locked. All turnouts that are being monitored by the JMRI program and
 are included in the route will be locked. In the route edit window, an
 optional lock control turnout is available. You can use the lock control
 turnout to enable or disable the locks from a panel icon. The lock
 control turnout can be an internal or external turnout. To use this new
 feature the system must be NCE using 2007 EPROM or newer, and the
-turnouts to be locked must use MONITORING for feedback.</p>
+turnouts to be locked must use MONITORING for feedback.</P>
 
-</body>
-</html>
+</BODY>
+</HTML>
 
