--- a/help/en/package/jmri/jmrit/beantable/SensorAddEdit.html
+++ b/help/en/package/jmri/jmrit/beantable/SensorAddEdit.html
@@ -1,29 +1,34 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- $Id: SensorAddEdit.html,v 1.2 2007-04-08 04:41:39 jacobsen Exp $ -->
-<html lang="en">
-<head>
- <TITLE>
-      JMRI: Adding/Editing Sensors
- </TITLE>
-    <META http-equiv=Content-Type content="text/html; charset=iso-8859-1">
-    <META content="Bob Jacobsen" name=Author>
-    <META name="keywords" content="JMRI help Sensor Add Edit">
+<!-- $Id: SensorAddEdit.html,v 1.3 2007-11-03 21:26:25 dan_boudreau Exp $ -->
+<HTML LANG="en">
+<HEAD>
+<TITLE>JMRI: Adding/Editing Sensors</TITLE>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+<META CONTENT="Bob Jacobsen" NAME="Author">
+<META NAME="keywords" CONTENT="JMRI help Sensor Add Edit">
 
 <!-- Style -->
-  <META http-equiv=Content-Type content="text/html; charset=iso-8859-1">
-  <link rel="stylesheet" type="text/css" href="/css/default.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="/css/print.css" media="print">
-  <link rel="icon" href="/images/jmri.ico" type="image/png">
-  <link rel="home" title="Home" href="/">
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+<LINK REL="stylesheet" TYPE="text/css" HREF="/css/default.css"
+	MEDIA="screen">
+<LINK REL="stylesheet" TYPE="text/css" HREF="/css/print.css"
+	MEDIA="print">
+<LINK REL="icon" HREF="/images/jmri.ico" TYPE="image/png">
+<LINK REL="home" TITLE="Home" HREF="/">
 <!-- /Style -->
-</head>
+</HEAD>
 
-<body>
-<H2>Adding/Editing Sensors
-</H2>
-    
-This is the package/jmri/jmrit/beantable/SensorAddEdit help page
+<BODY>
+<H2>Adding/Editing Sensors</H2>
 
-</body>
-</html>
+Enter the system name for the sensor you wish to add. For example, a
+valid sensor system name for a LocoNet layout could be LS456. Another
+example, a valid internal sensor system name could be IS123. The
+optional user name can be anything you wish to describe the sensor. See
+"
+<A HREF="../../../../html/doc/Technical/Names.html">Names</A>
+" under general help for more information.
+
+</BODY>
+</HTML>
 
