--- a/help/en/package/jmri/jmrit/beantable/RouteAddEdit.html
+++ b/help/en/package/jmri/jmrit/beantable/RouteAddEdit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- $Id: RouteAddEdit.html,v 1.3 2007-11-03 17:01:17 dan_boudreau Exp $ -->
+<!-- $Id: RouteAddEdit.html,v 1.4 2007-11-04 23:31:28 dan_boudreau Exp $ -->
 <html lang="en">
 <head>
  <TITLE>
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-<H2>Adding/Editing Routes
+<H2><a name="Adding/Editing Routes"></a>Adding/Editing Routes 
 </H2>
     
 <p>The first thing you must do when creating a route is name it. In
