--- a/help/en/package/jmri/jmrit/beantable/SensorTable.html
+++ b/help/en/package/jmri/jmrit/beantable/SensorTable.html
@@ -1,51 +1,54 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- $Id: SensorTable.html,v 1.3 2007-11-03 21:26:25 dan_boudreau Exp $ -->
-<html lang="en">
-<head>
- <TITLE>
-      JMRI: Sensor Table Help
- </TITLE>
-    <META http-equiv=Content-Type content="text/html; charset=iso-8859-1">
-    <META content="Bob Jacobsen" name=Author>
-    <META name="keywords" content="JMRI help Sensor Table">
+<!-- $Id: SensorTable.html,v 1.4 2007-11-04 23:31:28 dan_boudreau Exp $ -->
+<HTML LANG="en">
+<HEAD>
+<TITLE>JMRI: Sensor Table Help</TITLE>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+<META CONTENT="Bob Jacobsen" NAME="Author">
+<META NAME="keywords" CONTENT="JMRI help Sensor Table">
 
 <!-- Style -->
-  <META http-equiv=Content-Type content="text/html; charset=iso-8859-1">
-  <link rel="stylesheet" type="text/css" href="/css/default.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="/css/print.css" media="print">
-  <link rel="icon" href="/images/jmri.ico" type="image/png">
-  <link rel="home" title="Home" href="/">
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+<LINK REL="stylesheet" TYPE="text/css" HREF="/css/default.css"
+	MEDIA="screen">
+<LINK REL="stylesheet" TYPE="text/css" HREF="/css/print.css"
+	MEDIA="print">
+<LINK REL="icon" HREF="/images/jmri.ico" TYPE="image/png">
+<LINK REL="home" TITLE="Home" HREF="/">
 <!-- /Style -->
-</head>
+</HEAD>
 
-<body>
-<H2>The Sensor Table
-</H2>
-    
-<P>This table contains a list of all sensors that exist for this
+<BODY>
+<H2>The Sensor Table</H2>
+
+<P>This table contains a list of the sensors that exist for this
 panel.</P>
 <BR>
 <H3>Turnout Sensor Buttons and Checkboxes</H3>
 
-<UL>
-	<LI>User Name <BR>
-	You can directly enter or change the "User Name" for an existing
-	sensor.</LI>
-	<LI>State<BR>
-	Pushing the "State" command button will change the state of an existing
-	sensor.</LI>
-	<LI>Delete<BR>
-	Pushing the "Delete" button will remove the sensor from the table. To permanently
-	delete the sensor you must save the panel.</LI>
-	<LI>Inverted<BR>
-	When checked, the sensor command and status is
-	inverted. For example, an inverted sensor means that when the layout sends an
-	"active" sensor command, it becomes "inactive" to JMRI. </LI>
-	<LI>Add<BR>
-	Pressing this button allows you to add a new sensor.</LI>
-</UL>
+<DL>
+	<DT>User Name</DT>
+	<DD>You can directly enter or change the "User Name" for an
+	existing sensor.</DD>
 
+	<DT>State</DT>
+	<DD>Pushing the "State" command button will change the state of an
+	existing sensor.</DD>
 
-</body>
-</html>
+	<DT>Delete</DT>
+	<DD>Pushing the "Delete" button will remove the sensor from the
+	table. To permanently delete the sensor you must save the panel.</DD>
+
+	<DT>Inverted</DT>
+	<DD>When checked, the sensor command and status is inverted. For
+	example, an inverted sensor means that when the layout sends an
+	"active" sensor command, it becomes "inactive" to JMRI.</DD>
+
+	<DT>Add</DT>
+	<DD>Pressing this button allows you to add a new sensor.</DD>
+
+</DL>
+
+</BODY>
+</HTML>
 
