--- a/help/en/package/jmri/jmrit/beantable/TurnoutTable.html
+++ b/help/en/package/jmri/jmrit/beantable/TurnoutTable.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- $Id: TurnoutTable.html,v 1.4 2007-11-04 18:42:28 dan_boudreau Exp $ -->
+<!-- $Id: TurnoutTable.html,v 1.5 2007-11-06 15:25:50 dan_boudreau Exp $ -->
 <HTML LANG="en">
 <HEAD>
 <TITLE>JMRI: Turnout Table Help</TITLE>
@@ -111,9 +111,10 @@ have wired your layout to allow it.</P>
 <P>The whole question of turnout feedback is then "How do we
 configure the program to understand the known state properly, given my
 layout hardware?"</P>
-<P>In the turnout table click on the box in the lower left that is
-labeled "Show feedback information". Now expand the turnout table window
-and you'll find four columns associated with feedback:</P>
+<P>In the turnout table (Tools->Tables->Turnouts) click on the box
+in the lower left that is labeled "Show feedback information". Now
+expand the turnout table window and you'll find four columns associated
+with feedback:</P>
 <DL>
 	<DT>"Feedback"</DT>
 	<DD>This is the "known state". You can't change it, but this
@@ -163,13 +164,17 @@ and you'll find four columns associated with feedback:</P>
 	<DD>Currently only available for LocoNet turnouts, this informs
 	the program that the turnout is being driven by a Digitrax DS54 with a
 	microswitch attached to the switch lead. For more information, see the
-	JMRI DS54 Examples page on the JMRI website.</DD>
+	JMRI <A
+		HREF="http://jmri.sourceforge.net/doc/Technical/loconet/DS54.html">DS54</A>
+	examples page on the JMRI website.</DD>
 
 	<DT>EXACT</DT>
 	<DD>Currently only available for LocoNet turnouts, this informs
 	the program that the turnout is being driven by a Digitrax DS54 with
 	two microswitches attached to the switch and aux leads. For more
-	information, see the JMRI DS54 Examples page on the JMRI website.</DD>
+	information, see the JMRI <A
+		HREF="http://jmri.sourceforge.net/doc/Technical/loconet/DS54.html">DS54</A>
+	examples page on the JMRI website.</DD>
 
 </DL>
 
