--- a/help/en/package/jmri/jmrit/beantable/TurnoutTable.html
+++ b/help/en/package/jmri/jmrit/beantable/TurnoutTable.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- $Id: TurnoutTable.html,v 1.5 2007-11-06 15:25:50 dan_boudreau Exp $ -->
+<!-- $Id: TurnoutTable.html,v 1.6 2007-11-11 00:48:25 dan_boudreau Exp $ -->
 <HTML LANG="en">
 <HEAD>
 <TITLE>JMRI: Turnout Table Help</TITLE>
@@ -23,14 +23,22 @@
 
 <P>This table contains a list of all turnouts that exist for this
 panel. From this table you can change the state of a turnout, change the
-feedback mode, enter sensors for feedback, invert, and delete it.</P>
+feedback mode, enter sensors for feedback, invert, lock, and delete it.</P>
 <BR>
 <H3>Turnout Table Buttons and Checkboxes</H3>
 
 <DL>
+	<DT>System Name</DT>
+	<DD>The System Name cannot be changed once entered into the table.
+	The "Add" button located in the lower left corner of the table allows
+	you to add a new turnout to the table. You must use a valid System Name
+	for a turnout. See <A HREF="../../../../html/doc/Technical/Names.html">Names</A>
+	for more info.</DD>
+
 	<DT>User Name</DT>
 	<DD>You can directly enter or change the "User Name" for an
-	existing turnout.</DD>
+	existing turnout. This can be pretty much anything you wish to describe
+	the turnout.</DD>
 
 	<DT>Cmd</DT>
 	<DD>Pushing the "Cmd" command button will change the state of an
@@ -48,11 +56,17 @@ feedback mode, enter sensors for feedback, invert, and delete it.</P>
 	not be checked.</DD>
 
 	<DT>Locked</DT>
-	<DD>When checked, the turnout is locked. This means that turnouts
-	that can be locked by JMRI will not respond to commands from cabs to
-	change. Turnouts that can not be locked have grayed out boxes and can
-	not be checked. See <A HREF="#NCE Turnout lock feature">NCE Turnout
-	lock feature</A> below.</DD>
+	<DD>When checked, the turnout is locked. There are two types of
+	locks supported by JMRI, cab lockout and pushbutton lockout. When a
+	turnout is locked, only turnout commands from JMRI to move a turnout
+	will work. Cabs and pushbuttons on the layout are disabled. You can
+	selectively decide if you want "both" cabs and pushbuttons locked,
+	"cabs only", or "pushbuttons only". Click the "Show lock information"
+	box on the lower edge of the table for the lock options. Not all
+	stationary decoders support pushbutton lockout, and not all systems
+	support cab lockout. Turnouts that can not be locked have grayed out
+	boxes and can not be checked. See <A HREF="#NCE Turnout lock feature">NCE
+	Turnout lock feature</A> below.</DD>
 
 	<DT>Feedback</DT>
 	<DD>This shows the known state of a turnout.</DD>
@@ -72,11 +86,37 @@ feedback mode, enter sensors for feedback, invert, and delete it.</P>
 	feedback for a turnout. You can also directly enter or change the
 	system name of Sensor 2 for a turnout.</DD>
 
+	<DT><A NAME="Lock Mode"></A>Lock Mode</DT>
+	<DD>Shows which lockouts are active for this turnout. "Both" means
+	that cabs and pushbuttons will be locked out if the lock is active.
+	"Cabs only" means that cabs will be locked out, but pushbuttons will
+	continue to work when the lock is active. And "Pushbuttons only" means
+	that pushbuttons will be locked out, but cabs will continue to work
+	when the lock is active. Note, when JMRI locks a turnout's pushbutton,
+	it does so by sending a lock command to the turnout decoder's lock
+	control CV register. You must unlock the turnout before shutting down
+	the JMRI program if you want to restore the operation of the
+	pushbuttons. Cab lockout automatically terminates when the JMRI program
+	is shut down.</DD>
+
+	<DT>Decoder</DT>
+	<DD>Shows which decoder the turnout is using. Currently the
+	program only supports NCE and CVP stationary decoders. CVP decoders
+	support one or two pushbutton operation. Select the number of
+	pushbuttons used to operate that specific turnout. CVP_AD4_1B means one
+	button, and CVP_AD4_2B means two buttons. We recommend that you enter
+	all four CVP turnouts per decoder into the turnout table, even if
+	you're only locking one. You do not need to specify the number of
+	pushbuttons for NCE.</DD>
+
 	<DT>Add</DT>
 	<DD>Pressing this button allows you to add a new turnout.</DD>
 
 	<DT>Show feedback information</DT>
 	<DD>When checked, the optional feedback columns are shown.</DD>
+
+	<DT>Show lock information</DT>
+	<DD>When checked, the optional lock columns are shown.</DD>
 
 </DL>
 
