--- a/help/en/package/jmri/jmrit/display/PanelTarget.html
+++ b/help/en/package/jmri/jmrit/display/PanelTarget.html
@@ -1,29 +1,58 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- $Id: PanelTarget.html,v 1.1 2007-03-18 22:05:10 jacobsen Exp $ -->
-<html lang="en">
-<head>
- <TITLE>
-      JMRI: Panel Help
- </TITLE>
-    <META http-equiv=Content-Type content="text/html; charset=iso-8859-1">
-    <META content="Bob Jacobsen" name=Author>
-    <META name="keywords" content="JMRI help Panel">
+<!-- $Id: PanelTarget.html,v 1.2 2007-11-18 17:02:59 dan_boudreau Exp $ -->
+<HTML LANG="en">
+<HEAD>
+<TITLE>JMRI: Panel Help</TITLE>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+<META CONTENT="Bob Jacobsen" NAME="Author">
+<META NAME="keywords" CONTENT="JMRI help Panel">
 
 <!-- Style -->
-  <META http-equiv=Content-Type content="text/html; charset=iso-8859-1">
-  <link rel="stylesheet" type="text/css" href="/css/default.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="/css/print.css" media="print">
-  <link rel="icon" href="/images/jmri.ico" type="image/png">
-  <link rel="home" title="Home" href="/">
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+<LINK REL="stylesheet" TYPE="text/css" HREF="/css/default.css"
+	MEDIA="screen">
+<LINK REL="stylesheet" TYPE="text/css" HREF="/css/print.css"
+	MEDIA="print">
+<LINK REL="icon" HREF="/images/jmri.ico" TYPE="image/png">
+<LINK REL="home" TITLE="Home" HREF="/">
 <!-- /Style -->
-</head>
+</HEAD>
 
-<body>
-<H2>The Panel
-</H2>
-    
-This is the help/jmri/jmrit/display/PanelTarget help page
+<BODY>
+<H2>The Panel</H2>
 
-</body>
-</html>
+A panel is a set of icons representing various components of a layout.
+Some of the icons available in JMRI include turnouts, signals, and
+sensors. You can also include a background icon for your panel.
+
+<H3>Panel operation</H3>
+Clicking on a turnout symbol flips it from closed to thrown and
+vice-versa. A turnout also has "unknown" and "inconsistent" states,
+represented by an icon with a question mark and X respectively. These
+represent a state where no information has been received, and where the
+information is internally inconsistent (e.g. both closed and thrown at
+the same time).
+<P>This control can be used in various ways. For example, you could
+have a turnout icon covering a turnout on a schematic diagram. When you
+click on it, the turnout on the layout would be commanded to change, and
+the track diagram would show which way a train would be routed. Or you
+could use icons that show a lever to the right or left, and create a
+panel that looks like a traditional US&S panel.</P>
+<P>"Sensors" can be used to represent occupancy indicators or other
+inputs. The default icon is a small circle, with color used to represent
+the state of the sensor. These respond to changes on the layout
+automatically. Clicking on a sensor causes the sensor to alternate
+between "active" and "inactive" states. With the default icons, active
+is a green circle and inactive is an empty circle. These are meant to
+represent a lit/dark panel indicator. A red circle represents the
+"unknown" state, used when no information has yet been received from the
+layout.</P>
+<H3>Creating a panel</H3>
+These are made with a
+<A HREF= "PanelEditor.html"> Panel Editor</A>
+, which allows you to place images to represent turnouts, sensors (on
+some systems) and trackwork.
+
+</BODY>
+</HTML>
 
