--- a/help/en/package/jmri/jmrit/display/PanelTarget.html
+++ b/help/en/package/jmri/jmrit/display/PanelTarget.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- $Id: PanelTarget.html,v 1.2 2007-11-18 17:02:59 dan_boudreau Exp $ -->
+<!-- $Id: PanelTarget.html,v 1.3 2007-11-21 18:11:19 dan_boudreau Exp $ -->
 <HTML LANG="en">
 <HEAD>
 <TITLE>JMRI: Panel Help</TITLE>
@@ -49,9 +49,35 @@ represent a lit/dark panel indicator. A red circle represents the
 layout.</P>
 <H3>Creating a panel</H3>
 These are made with a
-<A HREF= "PanelEditor.html"> Panel Editor</A>
+<A HREF="PanelEditor.html"> Panel Editor</A>
 , which allows you to place images to represent turnouts, sensors (on
 some systems) and trackwork.
+
+<H3>Popup menus</H3>
+
+If the "Panel items popup menu active" box is checked in the Panel
+Editor, a small popup menu will appear when you right click an icon.
+Most icons allow you to rotate and remove the icon. There are other
+options depending on the type of icon, for example, you can disable a
+turnout so it doesn't actually control anything.
+
+<P>The popup menu may also change if the configuration of an item is
+changed. For example, if you add feedback to a turnout, the popup menu
+includes a new item choice called "Tristate". Tristate allows you to use
+the inconsistent icon, which is one of the four possible icons available
+for a turnout. Normally when you first click on a turnout icon it
+commands the layout to change the state of the turnout. If you use
+feedback for a particular turnout, the icon display will wait to hear
+from the layout before modifying the turnout icon to the closed or
+thrown icon. By using Tristate, the icon will change immediately to the
+inconsistent icon when the turnout is clicked. Inconsistent in this case
+means that I've commanded the turnout to change and now we're waiting to
+hear if it actually happened. If and when the layout returns the actual
+or "known state" of the turnout, the icon will change to that state. If
+you don't use Tristate, when you click on the icon, it may take some
+time (milliseconds to seconds depending on the system) before the icon
+responds with the known state of the turnout.</P>
+
 
 </BODY>
 </HTML>
